open links in new tab

--- a/eolas-nua.html
+++ b/eolas-nua.html
@@ -19,8 +19,8 @@ Irish linguistics in what follows.
 <p>
 There were two primary motivations for creating this site;
 the first was that existing search engines like
-<a href="http://www.google.com/">Google</a> and
-<a href="http://www.yahoo.com/">Yahoo!</a>,
+<a target="_blank" href="http://www.google.com/">Google</a> and
+<a target="_blank" href="http://www.yahoo.com/">Yahoo!</a>,
 as powerful as they can be for English search, are unsuitable for
 Irish in various ways that
 will be discussed in detail below.
@@ -29,11 +29,11 @@ that harnesses most of my
 previous work on language technology for Irish. 
 These earlier projects
 include the first Irish spellchecker
-(<a href="http://www.gaelspell.com/">GaelSpell</a>),
+(<a target="_blank" href="http://www.gaelspell.com/">GaelSpell</a>),
 part-of-speech tagger, morphological analyzer, grammar checker
-(<a href="https://cadhan.com/gramadoir/"><i>An Gramadóir</i></a>),
+(<a target="_blank" href="https://cadhan.com/gramadoir/"><i>An Gramadóir</i></a>),
 electronic thesaurus, and web-crawled corpora
-(both <a href="http://crubadan.org/">monolingual</a> and
+(both <a target="_blank" href="http://crubadan.org/">monolingual</a> and
 bilingual).
 </p>
 <p>
@@ -57,7 +57,7 @@ a few historical and legal documents on the web that use
 pre-standard orthography, most of them produced
 and published by
 the Irish government (one major source is the site
-<a href="http://www.achtanna.ie/">www.achtanna.ie</a>,
+<a target="_blank" href="http://www.achtanna.ie/">www.achtanna.ie</a>,
 which contains the full text of all Acts enacted by the Irish
 Parliament since 1922).
 So independent of the side one might take in the debate over the
@@ -74,7 +74,7 @@ with mappings to standardized forms.  These rules are augmented
 with a large database of non-standard/standard word pairs that was extracted in
 part from a parallel corpus of
 English and Irish texts (read more about this here:
-<a href="http://cs.slu.edu/~scannell/pub/ccgb.pdf">Applications of
+<a target="_blank" href="http://cs.slu.edu/~scannell/pub/ccgb.pdf">Applications of
 parallel corpora to the development of monolingual
 language technologies</a>).
 The end result is that if a user selects the box
@@ -205,7 +205,7 @@ on the web.  Now without too much work (and granted a certain amount
 of volunteer help from native speakers) I was able
 to train statistical language recognizers for the "next" 150
 or so languages and run web crawlers
-for each of them (see <a href="http://crubadan.org/">Corpus building for minority languages</a> for more information).  So I suspect that the
+for each of them (see <a target="_blank" href="http://crubadan.org/">Corpus building for minority languages</a> for more information).  So I suspect that the
 restriction to 30+ languages on Google's site must be a user interface
 decision on their part, so that 
 Swedish speakers won't have to scan through a list of 
@@ -218,7 +218,7 @@ For the non-Irish-speaking readers,
 vowels in Irish.   Back in the day before 8-bit email was
 widely available, messages sent to popular email discussion
 lists like
-<a href="https://listserv.heanet.ie/gaelic-l.html">GAELIC-L</a>
+<a target="_blank" href="https://listserv.heanet.ie/gaelic-l.html">GAELIC-L</a>
 were written with the infamous <i>slaiseanna</i>
 to indicate the accents: <tt>u/rsce/alai/</tt> = <i>úrscéalaí</i> (novelist)
 or <tt>te/acschomhad</tt> = <i>téacschomhad</i> (text file).
@@ -310,7 +310,7 @@ Even when there are documents available that contain
 legitimate Irish text, it sometimes happens that the page ranking algorithms
 are skewed in favor of sites that are heavily linked
 from non-Irish web pages.  A good example is the Open Directory
-Project <a href="http://dmoz.org/">dmoz.org</a> which often 
+Project <a target="_blank" href="http://dmoz.org/">dmoz.org</a> which often 
 gets high page rankings because of its wide popularity (especially
 among English and German speakers).   Unfortunately almost
 no Irish language sites are contained in the directory and so
