em dashes, even tho not in original

--- a/eolas-nua.html
+++ b/eolas-nua.html
@@ -256,11 +256,11 @@ a rudimentary system in place for translating
 English text to Irish. 
 This is used when documents are harvested from the web
 to translate boilerplate English titles into Irish; 
-for example “GAELIC-L Archives - June 2000” would appear in 
+for example “GAELIC-L Archives — June 2000” would appear in 
 <i>aimsigh.com</i>
-search results as “Cartlann GAELIC-L - Meitheamh 2000”.
-Or bilingual titles like “TG4 - Irish language television channel - Teilifis Gaeilge” [sic] are shortened and corrected to 
-“TG4 - Teilifís Ghaeilge”.   This makes for more effective
+search results as “Cartlann GAELIC-L — Meitheamh 2000”.
+Or bilingual titles like “TG4 — Irish language television channel — Teilifis Gaeilge” [sic] are shortened and corrected to 
+“TG4 — Teilifís Ghaeilge”.   This makes for more effective
 searching (since we assume primarily Irish language search terms
 will be used) and also a more pleasing Irish-only visual experience
 when scanning results.
@@ -275,7 +275,7 @@ to provide useful clues as to the contents of the document, or fails
 to distinguish the document from others on the site; good examples
 are pages from the Irish Times <i>Teanga Bheo</i> site, 
 the majority of which are titled simply
-“An Teanga Bheo - The Irish Times weekly Irish language site”.
+“An Teanga Bheo — The Irish Times weekly Irish language site”.
 For the <i>Lá</i> articles, we do our best to extract the
 title from the body of the HTML document and construct a title from that.
 For the <i>Teanga Bheo</i> articles, it is possible to extract the date of
